Custom intro spacing, more background color fixes

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,7 @@
+#intro 	p {
+    margin: 0 0 .8em 0;
+}
+
 #one {
     color: #e3d6cc;
 }
